--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2021"
 serde_json="1.0.59"
 serde = { version="1.0.136", features = ["derive"]}
 actix-web = "4"
+actix-service="2.0.2"
+futures = "0.3.21"
