--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -8,7 +8,13 @@ edition = "2021"
 [dependencies]
 serde_json="1.0.59"
 serde = { version="1.0.136", features = ["derive"]}
+
 actix-web = "4"
 actix-service="2.0.2"
 actix-cors = "0.6.1"
+
 futures = "0.3.21"
+
+diesel = { version = "1.4.8", features = ["postgres", "chrono", "r2d2"] }
+dotenv = "0.15.0"
+chrono = "0.4.19"
