--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -16,8 +16,10 @@ actix-cors = "0.6.1"
 futures = "0.3.21"
 
 diesel = { version = "1.4.8", features = ["postgres", "chrono", "r2d2"] }
-dotenv = "0.15.0"
 chrono = "0.4.19"
 
 serde_yaml = "0.8.23"
 lazy_static = "1.4.0"
+
+bcrypt = "0.13.0"
+uuid = {version = "1.0.0", features = ["serde", "v4"]}
