--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -16,10 +16,11 @@ actix-cors = "0.6.1"
 futures = "0.3.21"
 
 diesel = { version = "1.4.8", features = ["postgres", "chrono", "r2d2"] }
-chrono = "0.4.19"
+chrono = { version = "0.4.19", features = ["serde"]}
 
 serde_yaml = "0.8.23"
 lazy_static = "1.4.0"
 
 bcrypt = "0.13.0"
 uuid = {version = "1.0.0", features = ["serde", "v4"]}
+jsonwebtoken = "8.1.0"
