--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -2,8 +2,11 @@
 name = "book-web-app"
 version = "0.1.0"
 edition = "2021"
+build = "build.rs"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[build-dependencies]
+serde_yaml = "0.8.23"
+serde = {version="1.0.136", feartures= ["derive"]}
 
 [dependencies]
 serde_json="1.0.59"
